[gd_scene load_steps=67 format=3 uid="uid://cogtheoh5de17"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_doeh5"]
[ext_resource type="Texture2D" uid="uid://fdog7ou0gm4g" path="res://Shadows/MediumShadow.png" id="2_2b5o5"]
[ext_resource type="Texture2D" uid="uid://cpgqbbwrm6ucb" path="res://Player/Player.png" id="2_dtms5"]
[ext_resource type="PackedScene" uid="uid://cpps0v62eks1q" path="res://Overlap/hitbox.tscn" id="3_bkw1n"]
[ext_resource type="Shader" path="res://WhiteColor.gdshader" id="3_xpa6y"]
[ext_resource type="Script" path="res://Player/SwordHitbox.gd" id="4_tx7r7"]
[ext_resource type="AudioStream" uid="uid://cn73eae8u2oga" path="res://Music and Sounds/Swipe.wav" id="4_ue1c6"]
[ext_resource type="AudioStream" uid="uid://2a28mlrrbqup" path="res://Music and Sounds/Evade.wav" id="5_upgyu"]
[ext_resource type="PackedScene" uid="uid://d03nxqp6kni4c" path="res://Overlap/hurtbox.tscn" id="5_vyl66"]
[ext_resource type="Script" path="res://Player/camera_control.gd" id="10_4i6nx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eu3ny"]
shader = ExtResource("3_xpa6y")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hcbah"]
radius = 3.0
height = 10.0

[sub_resource type="Animation" id="Animation_cwa0s"]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ue1c6")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_4s6xm"]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ue1c6")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_4kk70"]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ue1c6")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_40krf"]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ue1c6")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_lkf08"]
resource_name = "IdleDown"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_n8v8i"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_b3mmc"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gc71f"]
resource_name = "IdleUp"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_y7ovq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_heb6o"]
resource_name = "RollDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_animation_finished"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.00408552,
"start_offset": 0.0,
"stream": ExtResource("5_upgyu")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_5p6mr"]
resource_name = "RollLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_animation_finished"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_upgyu")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_7wa16"]
resource_name = "RollRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_animation_finished"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_upgyu")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_430si"]
resource_name = "RollUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_animation_finished"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_upgyu")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_4mxbw"]
resource_name = "RunDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 18]
}

[sub_resource type="Animation" id="Animation_ww1qp"]
resource_name = "RunLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 12]
}

[sub_resource type="Animation" id="Animation_oasgw"]
resource_name = "RunRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_utwwu"]
resource_name = "RunUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayke2"]
_data = {
"AttackDown": SubResource("Animation_cwa0s"),
"AttackLeft": SubResource("Animation_4s6xm"),
"AttackRight": SubResource("Animation_4kk70"),
"AttackUp": SubResource("Animation_40krf"),
"IdleDown": SubResource("Animation_lkf08"),
"IdleLeft": SubResource("Animation_n8v8i"),
"IdleRight": SubResource("Animation_b3mmc"),
"IdleUp": SubResource("Animation_gc71f"),
"RESET": SubResource("Animation_y7ovq"),
"RollDown": SubResource("Animation_heb6o"),
"RollLeft": SubResource("Animation_5p6mr"),
"RollRight": SubResource("Animation_7wa16"),
"RollUp": SubResource("Animation_430si"),
"RunDown": SubResource("Animation_4mxbw"),
"RunLeft": SubResource("Animation_ww1qp"),
"RunRight": SubResource("Animation_oasgw"),
"RunUp": SubResource("Animation_utwwu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cafdb"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mowuq"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7ugnw"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2i1e5"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_15edo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_cafdb")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_mowuq")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7ugnw")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2i1e5")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_exjty"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_458yy"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gbvob"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cta55"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_yjpf8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_exjty")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_458yy")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_gbvob")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_cta55")
blend_point_3/pos = Vector2(0, -1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0fv6l"]
animation = &"RollLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0yab8"]
animation = &"RollDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_28ky6"]
animation = &"RollRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j62cd"]
animation = &"RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ku0m6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0fv6l")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0yab8")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_28ky6")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_j62cd")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibvnd"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0lpyc"]
animation = &"RunDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vcpfu"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qbaw5"]
animation = &"RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xnun3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ibvnd")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0lpyc")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_vcpfu")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_qbaw5")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0uaq8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t6tws"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rpsed"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nil6d"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s1xy6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nwp4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2t1xx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t0jao"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_injv7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0yf2i"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_15edo")
states/Attack/position = Vector2(569, -19.5351)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_yjpf8")
states/Idle/position = Vector2(569, 56)
states/Roll/node = SubResource("AnimationNodeBlendSpace2D_ku0m6")
states/Roll/position = Vector2(721, 11.1297)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_xnun3")
states/Run/position = Vector2(569, 131)
states/Start/position = Vector2(158, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_0uaq8"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_t6tws"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_rpsed"), "Idle", "End", SubResource("AnimationNodeStateMachineTransition_nil6d"), "Run", "End", SubResource("AnimationNodeStateMachineTransition_s1xy6"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_7nwp4"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_2t1xx"), "Idle", "Roll", SubResource("AnimationNodeStateMachineTransition_t0jao"), "Roll", "Idle", SubResource("AnimationNodeStateMachineTransition_injv7")]
graph_offset = Vector2(6, -45.8703)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mn2o2"]
radius = 17.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4wpnt"]
radius = 4.0
height = 14.0

[sub_resource type="Animation" id="Animation_wjui2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a5ldj"]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_51p58"]
resource_name = "Stop"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3c48"]
_data = {
"RESET": SubResource("Animation_wjui2"),
"Start": SubResource("Animation_a5ldj"),
"Stop": SubResource("Animation_51p58")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_doeh5")

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("2_2b5o5")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_eu3ny")
position = Vector2(0, -10)
texture = ExtResource("2_dtms5")
hframes = 60
frame = 37

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource("CapsuleShape2D_hcbah")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ayke2")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_0yf2i")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(0, 1)
parameters/Idle/blend_position = Vector2(0, 1)
parameters/Roll/blend_position = Vector2(0, 1)
parameters/Run/blend_position = Vector2(0, 1)

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(0, -6)
rotation = 4.71239

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource("3_bkw1n")]
position = Vector2(14, -7)
collision_layer = 8
script = ExtResource("4_tx7r7")

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
visible = false
position = Vector2(-4, 6)
shape = SubResource("CapsuleShape2D_mn2o2")
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource("5_vyl66")]
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_4wpnt")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_k3c48")
}

[node name="CameraControl" type="RemoteTransform2D" parent="."]
script = ExtResource("10_4i6nx")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
